--- a/website/build.gradle
+++ b/website/build.gradle
@@ -128,6 +128,10 @@ gitPublish {
 
 task gitSetup << {
   def branch = grgit.branch.current.name
+  exec {
+    executable 'sh'
+    args '-c', 'ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+  }
   //iif (branch != 'master') {
   ///  throw new GradleException("Cannot publish from branch ${branch}, only from master")
   //}
