--- a/website/build.gradle
+++ b/website/build.gradle
@@ -122,7 +122,7 @@ task commitWebsite << {
   // TODO Delete adding symlink
   exec {
     executable 'sh'
-    args '-c', "cd ${project.rootDir} && ln -s website/generated-content content && git add content"
+    args '-c', "cd ${project.rootDir} && rm -r content && ln -s website/generated-content content && git add content"
   }
   git.add(patterns: ["${project.rootDir}/content"])
 
