--- a/website/build.gradle
+++ b/website/build.gradle
@@ -111,6 +111,7 @@ task gitCreateSymlink << {
 task commitWebsite << {
   assert file("${buildContentDir}/index.html").exists()
   def git = grgit.open()
+  assert grgit.branch.current() == 'mergeWebsite'
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ repoContentDir ])
   delete(repoContentDir)
@@ -142,7 +143,7 @@ task publishWebsite << {
   def git = grgit.open()
   git.checkout(branch: 'asf-site')
   git.push()
-  git.checkout(branch: 'mergeWebsite')
+  git.checkout(branch: 'master')
 }
 
 commitWebsite.dependsOn buildWebsite
