--- a/website/build.gradle
+++ b/website/build.gradle
@@ -111,7 +111,8 @@ task gitCreateSymlink << {
 task commitWebsite << {
   assert file("${buildContentDir}/index.html").exists()
   def git = grgit.open()
-  assert grgit.branch.current() == 'mergeWebsite'
+  assert grgit.branch.current.name  == 'mergeWebsite'
+  //assert grgit.branch.current.name  == 'master'
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ repoContentDir ])
   delete(repoContentDir)
@@ -146,5 +147,5 @@ task publishWebsite << {
   git.checkout(branch: 'master')
 }
 
-commitWebsite.dependsOn buildWebsite
+//commitWebsite.dependsOn buildWebsite
 publishWebsite.dependsOn commitWebsite
