--- a/website/build.gradle
+++ b/website/build.gradle
@@ -108,12 +108,14 @@ task preCommit {
 // Creates a new commit on asf-site branch
 task commitWebsite << {
   assert file("${buildContentDir}/index.html").exists()
+  // Generated content is not stored here.
+  assert !file("${buildContentDir}/documentation/sdks/javadoc").exists()
+  assert !file("${buildContentDir}/documentation/sdks/pydoc").exists()
   def git = grgit.open()
   assert grgit.branch.current.name  == 'master'
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ repoContentDir ])
-  delete(repoContentDir)
-  mkdir(repoContentDir)
+  assert !file("${repoContentDir}/index.html").exists()
   copy {
     // TODO: Not just index.html
     from buildContentDir
