--- a/website/build.gradle
+++ b/website/build.gradle
@@ -112,7 +112,8 @@ task commitWebsite << {
   assert !file("${buildContentDir}/documentation/sdks/javadoc").exists()
   assert !file("${buildContentDir}/documentation/sdks/pydoc").exists()
   def git = grgit.open()
-  assert grgit.branch.current.name  == 'master'
+  assert grgit.branch.current.name  == 'mergeWebsite'
+  //assert grgit.branch.current.name  == 'master'
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ repoContentDir ])
   assert !file("${repoContentDir}/index.html").exists()
