--- a/website/build.gradle
+++ b/website/build.gradle
@@ -108,16 +108,16 @@ task preCommit {
 // Creates a new commit on asf-site branch
 task commitWebsite << {
   assert file("${buildContentDir}/index.html").exists()
-  // Generated content is not stored here.
+  // Generated javadoc and pydoc content is noa built or stored in this repo.
   assert !file("${buildContentDir}/documentation/sdks/javadoc").exists()
   assert !file("${buildContentDir}/documentation/sdks/pydoc").exists()
+
   def git = grgit.open()
-  assert grgit.branch.current.name  == 'mergeWebsite'
   //assert grgit.branch.current.name  == 'master'
   git.checkout(branch: 'asf-site')
-  git.remove(patterns: [ repoContentDir ])
-  delete repoContentDir
+  git.remove(patterns: [ 'website/generated-content' ])
   assert !file("${repoContentDir}/index.html").exists()
+  delete repoContentDir
   copy {
     // TODO: Not just index.html
     from buildContentDir
