--- a/website/build.gradle
+++ b/website/build.gradle
@@ -113,7 +113,7 @@ task commitWebsite << {
   assert !file("${buildContentDir}/documentation/sdks/pydoc").exists()
 
   def git = grgit.open()
-  //assert grgit.branch.current.name  == 'master'
+  assert grgit.branch.current.name  == 'master'
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ 'website/generated-content' ])
   assert !file("${repoContentDir}/index.html").exists()
@@ -150,5 +150,5 @@ task publishWebsite << {
 }
 
 // TODO: Depend on testWebsite
-//commitWebsite.dependsOn buildWebsite
+commitWebsite.dependsOn buildWebsite
 publishWebsite.dependsOn commitWebsite
