--- a/website/build.gradle
+++ b/website/build.gradle
@@ -113,6 +113,7 @@ task commitWebsite << {
   assert !file("${buildContentDir}/documentation/sdks/pydoc").exists()
 
   def git = grgit.open()
+  git.fetch()
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ 'website/generated-content' ])
   assert !file("${repoContentDir}/index.html").exists()
