--- a/website/build.gradle
+++ b/website/build.gradle
@@ -113,7 +113,7 @@ task commitWebsite << {
   assert !file("${buildContentDir}/documentation/sdks/pydoc").exists()
 
   def git = grgit.open()
-Y  grgit.fetch(refSpecs: ['refs/heads/asf-site:refs/heads/asf-site'])
+  grgit.fetch(refSpecs: ['refs/heads/asf-site:refs/heads/asf-site'])
   git.fetch()
   git.checkout(branch: 'asf-site')
   git.remove(patterns: [ 'website/generated-content' ])
