--- a/website/build.gradle
+++ b/website/build.gradle
@@ -146,7 +146,7 @@ task commitWebsite << {
 task publishWebsite << {
   def git = grgit.open()
   git.checkout(branch: 'asf-site')
-  git.push(remote: 'git@github.com:apache/beam.git',
+  git.push(remote: 'https://git-wip-us.apache.org/repos/asf/beam.git',
            refsOrSpecs: ['refs/heads/asf-site:refs/heads/asf-site'])
 }
 
