--- a/website/build.gradle
+++ b/website/build.gradle
@@ -144,22 +144,16 @@ task commitWebsite << {
 task publishWebsite << {
   def git = grgit.open()
   git.checkout(branch: 'asf-site')
-  exec {
+/*  exec {
     executable 'sh'
     args '-c', "cd ${project.rootDir} && git remote set-url origin https://gitbox.apache.org/repos/asf/beam.git"
   }
   exec {
     executable 'sh'
-    args '-c', "cd ${project.rootDir} && git remote -v"
-  }
-  exec {
-    executable 'sh'
-    args '-c', "cd ${project.rootDir} && git config -l"
-  }
-  exec {
-    executable 'sh'
     args '-c', "cd ${project.rootDir} && git push origin asf-site"
-  }
+  } 
+*/
+  git.push(remote: 'https://gitbox.apache.org/repos/asf/beam.git')
 }
 
 // TODO: Depend on testWebsite
