--- a/website/build.gradle
+++ b/website/build.gradle
@@ -126,14 +126,6 @@ task commitWebsite << {
   assert file("${repoContentDir}/index.html").exists()
   git.add(patterns: ['website/generated-content'])
 
-  // TODO Delete adding symlink
-  delete("${project.rootDir}/content")
-  exec {
-    executable 'sh'
-    args '-c', "cd ${project.rootDir} && ln -s website/generated-content content"
-  }
-  git.add(patterns: ['content'])
-
   def latestCommit = grgit.log(maxCommits: 1)[0].abbreviatedId
   def currentDate = new Date().format('yyyy/MM/dd HH:mm:ss')
   String message = "Publishing website ${currentDate} at commit ${latestCommit}"
@@ -144,13 +136,15 @@ task commitWebsite << {
 task publishWebsite << {
   def git = grgit.open()
   git.checkout(branch: 'asf-site')
-/*  exec {
+  // grgit has problems authenticating, s
+/*
+  exec {
     executable 'sh'
-    args '-c', "cd ${project.rootDir} && git remote set-url origin https://gitbox.apache.org/repos/asf/beam.git"
+    args '-c', "git remote set-url origin https://gitbox.apache.org/repos/asf/beam.git"
   }
   exec {
     executable 'sh'
-    args '-c', "cd ${project.rootDir} && git push origin asf-site"
+    args '-c', "git push origin asf-site"
   } 
 */
   git.push(remote: 'https://gitbox.apache.org/repos/asf/beam.git')
