--- a/settings.gradle
+++ b/settings.gradle
@@ -168,6 +168,8 @@ include "beam-sdks-python"
 project(":beam-sdks-python").dir = file("sdks/python")
 include "beam-sdks-python-container"
 project(":beam-sdks-python-container").dir = file("sdks/python/container")
+include "beam-vendor-java-grpc-v1"
+project(":beam-vendor-java-grpc-v1").dir = file("vendor/java-grpc-v1")
 include "beam-vendor-sdks-java-extensions-protobuf"
 project(":beam-vendor-sdks-java-extensions-protobuf").dir = file("vendor/sdks-java-extensions-protobuf")
 include "beam-website"
