Fixed presubmit tests

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -48,6 +48,7 @@ list_dependencies_command = {envbindir}/python {envbindir}/pip freeze
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -61,6 +62,7 @@ modules =
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python setup.py nosetests --tests {[testenv:py3]modules}
   {toxinidir}/scripts/run_tox_cleanup.sh
@@ -74,6 +76,7 @@ platform = linux2
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -84,6 +87,7 @@ extras = test,gcp
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -99,6 +103,7 @@ deps =
 commands =
   pylint --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint.sh
 
@@ -113,6 +118,7 @@ deps =
 commands =
   pylint --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint_2to3.sh
 
@@ -129,6 +135,7 @@ setenv =
 commands =
   pylint --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_mini_py3lint.sh
 
@@ -140,6 +147,7 @@ deps =
 commands =
   python --version
   pip --version
+  pip list
   time {toxinidir}/scripts/generate_pydoc.sh
 
 [testenv:cover]
@@ -149,6 +157,7 @@ deps =
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   # Clean up previously collected data.
   coverage erase
