--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -48,6 +48,7 @@ list_dependencies_command = {envbindir}/python {envbindir}/pip freeze
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -62,6 +63,7 @@ modules =
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python setup.py nosetests --tests {[testenv:py3]modules}
   {toxinidir}/scripts/run_tox_cleanup.sh
@@ -75,6 +77,7 @@ platform = linux2
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -85,6 +88,7 @@ extras = test,gcp
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -100,6 +104,7 @@ deps =
 commands =
   pylint --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint.sh
 
@@ -114,6 +119,7 @@ deps =
 commands =
   pylint --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint_2to3.sh
 
@@ -130,6 +136,7 @@ setenv =
 commands =
   pylint --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_mini_py3lint.sh
 
@@ -141,6 +148,7 @@ deps =
 commands =
   python --version
   pip --version
+  pip list
   time {toxinidir}/scripts/generate_pydoc.sh
 
 [testenv:cover]
@@ -150,6 +158,7 @@ deps =
 commands =
   python --version
   pip --version
+  pip list
   {toxinidir}/scripts/run_tox_cleanup.sh
   # Clean up previously collected data.
   coverage erase
