--- a/website/Rakefile
+++ b/website/Rakefile
@@ -17,7 +17,8 @@ task :test do
 
         /jstorm.io/,
         /datatorrent.com/,
-        /ai.google/ # https://issues.apache.org/jira/browse/INFRA-16527
+        /ai.google/, # https://issues.apache.org/jira/browse/INFRA-16527
+        /globenewswire.com/ # https://issues.apache.org/jira/browse/BEAM-5518
     ],
     :parallel => { :in_processes => Etc.nprocessors },
     }).run
