--- a/website/build.gradle
+++ b/website/build.gradle
@@ -116,6 +116,7 @@ task commitWebsite << {
   def git = grgit.open()
   // get the latest commit on master
   def latestCommit = grgit.log(maxCommits: 1)[0].abbreviatedId
+  git.fetch()
   git.checkout(branch: 'asf-site')
 
   // Delete the previous content.
@@ -171,13 +172,16 @@ task publishWebsite << {
     // Cannot authenticate to the default github uri, so specify gitbox.
     git.remote.add(name: 'website-publish',
                    url: 'https://gitbox.apache.org/repos/asf/beam.git',
-                   pushRefSpecs: ['refs/heads/asf-site'])
+                   pushRefSpecs: ['asf-site'])
   }
   // Because git.push() fails to authenticate, run git push directly.
+  git.push(remote: 'website-publish', force: true)
+/*
   exec {
     executable 'sh'
     args '-c', "git push website-publish asf-site"
   } 
+*/
   // Remove the remote. grgit does not have a remote.remove method.
   exec {
     executable 'sh'
