--- a/website/build.gradle
+++ b/website/build.gradle
@@ -176,7 +176,7 @@ task publishWebsite << {
   // Because git.push() fails to authenticate, run git push directly.
   exec {
     executable 'sh'
-    args '-c', "git push website-publish asf-site"
+    args '-c', "git push -f website-publish asf-site"
   } 
   // Remove the remote. grgit does not have a remote.remove method.
   exec {
