--- a/website/build.gradle
+++ b/website/build.gradle
@@ -176,10 +176,13 @@ task publishWebsite << {
                    pushRefSpecs: ['refs/heads/asf-site'])
   }
   // Because git.push() fails to authenticate, run git push directly.
+  git push(remote: 'website-publish', refsOrSpecs: ['refs/heads/asf-site:refs/heads/asf-site'])
+/*
   exec {
     executable 'sh'
     args '-c', "git push website-publish asf-site"
   } 
+*/
   // Remove the remote. grgit does not have a remote.remove method.
   exec {
     executable 'sh'
