--- a/website/build.gradle
+++ b/website/build.gradle
@@ -176,7 +176,7 @@ task publishWebsite << {
                    pushRefSpecs: ['refs/heads/asf-site'])
   }
   // Because git.push() fails to authenticate, run git push directly.
-  git push(remote: 'website-publish', refsOrSpecs: ['refs/heads/asf-site:refs/heads/asf-site'])
+  git.push(remote: 'website-publish')
 /*
   exec {
     executable 'sh'
