--- a/website/build.gradle
+++ b/website/build.gradle
@@ -176,7 +176,7 @@ task publishWebsite << {
                    pushRefSpecs: ['asf-site'])
   }
   // Because git.push() fails to authenticate, run git push directly.
-  git.push(remote: 'website-publish')
+  git.push(remote: 'website-publish', force: true)
 /*
   exec {
     executable 'sh'
