--- a/settings.gradle
+++ b/settings.gradle
@@ -172,6 +172,8 @@ include "beam-sdks-python"
 project(":beam-sdks-python").dir = file("sdks/python")
 include "beam-sdks-python-container"
 project(":beam-sdks-python-container").dir = file("sdks/python/container")
+include "beam-sdks-python-container-py27"
+project(":beam-sdks-python-container-py27").dir = file("sdks/python/container/py27")
 include "beam-vendor-sdks-java-extensions-protobuf"
 project(":beam-vendor-sdks-java-extensions-protobuf").dir = file("vendor/sdks-java-extensions-protobuf")
 include "beam-website"
