--- a/website/build.gradle
+++ b/website/build.gradle
@@ -190,5 +190,5 @@ task publishWebsite << {
   }
 }
 
-//commitWebsite.dependsOn testWebsite
+commitWebsite.dependsOn testWebsite
 publishWebsite.dependsOn commitWebsite
