--- a/website/build.gradle
+++ b/website/build.gradle
@@ -175,7 +175,8 @@ task publishWebsite << {
                    pushRefSpecs: ['asf-site'])
   }
   // Because git.push() fails to authenticate, run git push directly.
-  git.push(remote: 'website-publish', force: true)
+  git.fetch()
+  git.push(remote: 'website-publish')
 /*
   exec {
     executable 'sh'
