--- a/website/build.gradle
+++ b/website/build.gradle
@@ -129,7 +129,7 @@ task commitWebsite << {
     git.remote.add(name: 'test-upstream',
                    url: 'https://gitbox.apache.org/repos/asf/beam.git')
   }
-  shell "git fetch origin")
+  shell "git fetch origin"
   shell "git fetch test-upstream"
   git.checkout(branch: 'asf-site')
   shell "git fetch test-upstream"
