--- a/website/build.gradle
+++ b/website/build.gradle
@@ -188,7 +188,7 @@ task publishWebsite << {
     println "Adding website-publish remote"
     // Cannot authenticate to the default github uri, so specify gitbox.
     git.remote.add(name: 'website-publish',
-                   url: 'https://gitbox.apache.org/repos/asf/beam.git'
+                   url: 'https://gitbox.apache.org/repos/asf/beam.git')
   }
 
   // Because git.push() fails to authenticate, run git push directly.
